# axectl

./: .gitignore  CONVENTIONS.md  Cargo.toml  README.md  axectl.sh  build.sh  deny.toml  flake.nix  out  result
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  nix.yml  release-binaries.yml  release.yml  security.yml
src/: cache.rs  lib.rs  main.rs  mcp_server.rs
src/api/: bitaxe.rs  client.rs  mod.rs  models.rs  nerdqaxe.rs
src/cli/: commands.rs
src/cli/commands/handlers/: bulk.rs  control.rs  discovery.rs  group.rs  list.rs  mod.rs  monitor.rs  monitor_async.rs  stats.rs
src/discovery/: mdns.rs  mod.rs  network.rs  scanner.rs
src/monitor/: collector.rs
src/output/: json.rs  mod.rs  text.rs
src/storage/: global.rs  memory.rs  mod.rs
test-cache/: devices.json
tests/: integration_tests.rs
tests/fixtures/: mock_responses.rs  mod.rs
tests/integration/: device_control.rs  discovery_workflow.rs  mod.rs  monitoring_alerts.rs
