[package]
name = "axectl"
version = "0.1.0"
edition = "2024"
description = "CLI tool for managing Bitaxe and NerdQAxe miners"
license = "MIT"
repository = "https://github.com/douglaz/axectl"

[dependencies]
# Core
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }
tabled = { version = "0.20", features = ["std", "ansi"] }
colored = "3"
strum = { version = "0.27", features = ["derive"] }
crossterm = "0.29"

# Network
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
mdns-sd = "0.15"
ipnetwork = "0.21"
local-ip-address = "0.6"
url = "2"
flume = "0.11"

# Time and utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
ctrlc = "3"
dirs = "6"
alphanumeric-sort = "1"


# Logging
tracing = "0.1"
tracing-subscriber = "0.3.20"

# MCP Server
rmcp = { version = "0.6.3", features = ["server", "transport-io"], optional = true }
schemars = { version = "1.1", optional = true }

[dev-dependencies]
rmcp = { version = "0.6.3", features = ["server", "client", "transport-child-process"] }
tempfile = "3"
mockito = "1.4"
proptest = "1.4"
tokio-test = "0.4"
serial_test = "3.0"

[features]
default = ["mcp"]
mcp = ["dep:rmcp", "dep:schemars"]
